included confusion matrix

--- a/3. SMOTE.ipynb
+++ b/3. SMOTE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +106,8 @@
       "0    558065\n",
       "1     20016\n",
       "Name: count, dtype: int64\n",
-      "CPU times: user 3.05 s, sys: 430 ms, total: 3.48 s\n",
-      "Wall time: 3.68 s\n"
+      "CPU times: user 3.16 s, sys: 497 ms, total: 3.66 s\n",
+      "Wall time: 4.02 s\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -233,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 336 ms, sys: 114 ms, total: 450 ms\n",
-      "Wall time: 485 ms\n"
+      "CPU times: user 326 ms, sys: 117 ms, total: 443 ms\n",
+      "Wall time: 487 ms\n"
      ]
     }
    ],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,15 +378,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cents, addr1_FE , card1_FE , card2_FE , card3_FE , P_emaildomain_FE , card1_addr1 , card1_addr1_P_emaildomain , card1_addr1_FE , card1_addr1_P_emaildomain_FE , 'TransactionAmt_card1_mean' , 'TransactionAmt_card1_std' , 'TransactionAmt_card1_addr1_mean' , 'TransactionAmt_card1_addr1_std' , 'TransactionAmt_card1_addr1_P_emaildomain_mean' , 'TransactionAmt_card1_addr1_P_emaildomain_std' , 'D11_card1_mean' , 'D11_card1_std' , 'D11_card1_addr1_mean' , 'D11_card1_addr1_std' , 'D11_card1_addr1_P_emaildomain_mean' , 'D11_card1_addr1_P_emaildomain_std' , CPU times: user 1.75 s, sys: 625 ms, total: 2.38 s\n",
-      "Wall time: 2.7 s\n"
+      "cents, addr1_FE , card1_FE , card2_FE , card3_FE , P_emaildomain_FE , card1_addr1 , card1_addr1_P_emaildomain , card1_addr1_FE , card1_addr1_P_emaildomain_FE , 'TransactionAmt_card1_mean' , 'TransactionAmt_card1_std' , 'TransactionAmt_card1_addr1_mean' , 'TransactionAmt_card1_addr1_std' , 'TransactionAmt_card1_addr1_P_emaildomain_mean' , 'TransactionAmt_card1_addr1_P_emaildomain_std' , 'D11_card1_mean' , 'D11_card1_std' , 'D11_card1_addr1_mean' , 'D11_card1_addr1_std' , 'D11_card1_addr1_P_emaildomain_mean' , 'D11_card1_addr1_P_emaildomain_std' , CPU times: user 1.58 s, sys: 487 ms, total: 2.07 s\n",
+      "Wall time: 2.35 s\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -477,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 40s, sys: 46.1 s, total: 4min 26s\n",
+      "CPU times: user 3min 41s, sys: 45.8 s, total: 4min 26s\n",
       "Wall time: 38.2 s\n"
      ]
     },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
      "output_type": "stream",
      "text": [
       "Following 16 features removed:\n",
-      "{'M1', 'M3', 'V9', 'V286', 'V1', 'M2', 'card4', 'V289', 'V310', 'V305', 'V7', 'addr2', 'TransactionDT', 'V107', 'V104', 'V297'}\n",
+      "{'V286', 'TransactionDT', 'V305', 'card4', 'V297', 'M1', 'V1', 'M3', 'V9', 'M2', 'V310', 'addr2', 'V104', 'V107', 'V7', 'V289'}\n",
       "######################################################################\n",
       "Following 123 features selected:\n",
       "['TransactionAmt' 'ProductCD' 'card1' 'card2' 'card3' 'card5' 'card6'\n",
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -659,8 +659,8 @@
       "[2000]\tvalid_0's auc: 0.995012\n",
       "Did not meet early stopping. Best iteration is:\n",
       "[1978]\tvalid_0's auc: 0.995015\n",
-      "CPU times: user 13min 17s, sys: 1min 50s, total: 15min 7s\n",
-      "Wall time: 2min 20s\n"
+      "CPU times: user 13min 35s, sys: 1min 49s, total: 15min 24s\n",
+      "Wall time: 2min 19s\n"
      ]
     }
    ],
@@ -701,12 +701,63 @@
     "    X_train_resampled,y_train_resampled,\n",
     "    eval_set=[(X_valid_resampled, y_valid_resampled)],\n",
     "    callbacks=callbacks  # Use the callbacks argument for controlling verbosity\n",
-    ")"
+    ")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC AUC Score: 0.9950152295786918 \n",
+      "\n",
+      "Accuracy: 0.9729471126624284\n",
+      "Precision: 0.9898593975027096\n",
+      "Recall: 0.9556847258158153\n",
+      "F1 Score: 0.9724719121610041\n",
+      "Confusion Matrix:\n",
+      "[[138157   1366]\n",
+      " [  6183 133340]]\n",
+      "#################### \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict probabilities for the positive class (class 1)\n",
+    "y_pred_proba = clf.predict_proba(X_valid_resampled)[:, 1]\n",
+    "pred_threshold = 0.3\n",
+    "\n",
+    "# Convert probabilities to binary predictions based on a threshold (e.g., 0.5)\n",
+    "y_pred = (y_pred_proba >= pred_threshold).astype(int)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(y_valid_resampled, y_pred)\n",
+    "precision = precision_score(y_valid_resampled, y_pred)\n",
+    "recall = recall_score(y_valid_resampled, y_pred)\n",
+    "f1 = f1_score(y_valid_resampled, y_pred)\n",
+    "roc_auc = roc_auc_score(y_valid_resampled, y_pred_proba)\n",
+    "confusion = confusion_matrix(y_valid_resampled, y_pred)\n",
+    "\n",
+    "# Print the evaluation metrics and confusion matrix\n",
+    "print('ROC AUC Score:', roc_auc,'\\n')\n",
+    "print('Accuracy:', accuracy)\n",
+    "print('Precision:', precision)\n",
+    "print('Recall:', recall)\n",
+    "print('F1 Score:', f1)\n",
+    "print('Confusion Matrix:')\n",
+    "print(confusion)\n",
+    "print('#'*20,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -832,8 +883,8 @@
      "output_type": "stream",
      "text": [
       "uid_FE , 'TransactionAmt_uid_mean' , 'TransactionAmt_uid_std' , 'D4_uid_mean' , 'D4_uid_std' , 'D10_uid_mean' , 'D10_uid_std' , 'D15_uid_mean' , 'D15_uid_std' , 'C1_uid_mean' , 'C2_uid_mean' , 'C4_uid_mean' , 'C5_uid_mean' , 'C6_uid_mean' , 'C7_uid_mean' , 'C8_uid_mean' , 'C9_uid_mean' , 'C10_uid_mean' , 'C11_uid_mean' , 'C12_uid_mean' , 'C13_uid_mean' , 'C14_uid_mean' , 'M1_uid_mean' , 'M2_uid_mean' , 'M3_uid_mean' , 'M4_uid_mean' , 'M5_uid_mean' , 'M6_uid_mean' , 'M7_uid_mean' , 'M8_uid_mean' , 'M9_uid_mean' , uid_P_emaildomain_ct, uid_dist1_ct, uid_DT_M_ct, uid_cents_ct, 'C14_uid_std' , uid_C13_ct, uid_V134_ct, uid_V137_ct, uid_V312_ct, uid_V315_ct, uid_V318_ct, uid_V321_ct, outsider15\n",
-      "CPU times: user 22.4 s, sys: 885 ms, total: 23.3 s\n",
-      "Wall time: 23.7 s\n"
+      "CPU times: user 23.4 s, sys: 1.25 s, total: 24.7 s\n",
+      "Wall time: 25.5 s\n"
      ]
     }
    ],
@@ -872,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,22 +955,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Features: 100%|█████████████████████████████████████████████| 185/185 [01:01<00:00,  2.99it/s]"
+      "Processing Features: 100%|█████████████████████████████████████████████| 185/185 [01:00<00:00,  3.04it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5min 39s, sys: 1min 11s, total: 6min 51s\n",
-      "Wall time: 1min 2s\n"
+      "CPU times: user 5min 48s, sys: 1min 7s, total: 6min 55s\n",
+      "Wall time: 1min 1s\n"
      ]
     },
     {
@@ -960,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +1019,7 @@
      "output_type": "stream",
      "text": [
       "Following 21 features removed:\n",
-      "{'V1', 'card4', 'V286', 'V310', 'M1', 'outsider15', 'day', 'V305', 'addr2', 'TransactionDT', 'V289', 'V297', 'V107', 'M3', 'M2', 'V7', 'M1_uid_mean', 'D4_uid_mean', 'DT_M', 'V104', 'V9'}\n",
+      "{'DT_M', 'V297', 'M3', 'M1_uid_mean', 'V286', 'M1', 'V7', 'V289', 'TransactionDT', 'V305', 'card4', 'V1', 'outsider15', 'V9', 'day', 'V310', 'D4_uid_mean', 'addr2', 'V104', 'V107', 'M2'}\n",
       "######################################################################\n",
       "Following 164 features selected:\n",
       "['TransactionAmt' 'ProductCD' 'card1' 'card2' 'card3' 'card5' 'card6'\n",
@@ -1024,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1065,8 +1116,8 @@
       "[2000]\tvalid_0's auc: 0.995946\n",
       "Did not meet early stopping. Best iteration is:\n",
       "[1999]\tvalid_0's auc: 0.995946\n",
-      "CPU times: user 18min 27s, sys: 2min 4s, total: 20min 32s\n",
-      "Wall time: 3min 3s\n"
+      "CPU times: user 18min 56s, sys: 2min 10s, total: 21min 6s\n",
+      "Wall time: 3min 15s\n"
      ]
     }
    ],
@@ -1103,30 +1154,62 @@
     "    X_train_resampled,y_train_resampled,\n",
     "    eval_set=[(X_valid_resampled, y_valid_resampled)],\n",
     "    callbacks=callbacks  # Use the callbacks argument for controlling verbosity\n",
-    ")\n",
-    "\n",
-    "# # Predict probabilities for the positive class (class 1)\n",
-    "# y_prob = clf.predict_proba(X_train.loc[idxV, selected_features])[:, 1]\n",
-    "\n",
-    "# roc_auc = roc_auc_score(y_train[idxV], y_prob)\n",
-    "# conf_matrix = confusion_matrix(y_train[idxV], y_prob >= 0.5)  # Assuming 0.5 as a threshold\n",
-    "# accuracy = accuracy_score(y_train[idxV], y_prob >= 0.5)\n",
-    "# precision = precision_score(y_train[idxV], y_prob >= 0.5)\n",
-    "# recall = recall_score(y_train[idxV], y_prob >= 0.5)\n",
-    "# f1 = f1_score(y_train[idxV], y_prob >= 0.5)\n",
-    "\n",
-    "# print(\"ROC AUC Score:\", roc_auc)\n",
-    "# print(\"Confusion Matrix:\")\n",
-    "# print(conf_matrix)\n",
-    "# print(\"Accuracy:\", accuracy)\n",
-    "# print(\"Precision:\", precision)\n",
-    "# print(\"Recall:\", recall)\n",
-    "# print(\"F1 Score:\", f1)\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC AUC Score: 0.9959462611727229 \n",
+      "\n",
+      "Accuracy: 0.9766920149366054\n",
+      "Precision: 0.9890008896339266\n",
+      "Recall: 0.9641062763845387\n",
+      "F1 Score: 0.9763949276677288\n",
+      "Confusion Matrix:\n",
+      "[[138027   1496]\n",
+      " [  5008 134515]]\n",
+      "#################### \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict probabilities for the positive class (class 1)\n",
+    "y_pred_proba = clf.predict_proba(X_valid_resampled)[:, 1]\n",
+    "pred_threshold = 0.3\n",
+    "\n",
+    "# Convert probabilities to binary predictions based on a threshold (e.g., 0.5)\n",
+    "y_pred = (y_pred_proba >= pred_threshold).astype(int)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(y_valid_resampled, y_pred)\n",
+    "precision = precision_score(y_valid_resampled, y_pred)\n",
+    "recall = recall_score(y_valid_resampled, y_pred)\n",
+    "f1 = f1_score(y_valid_resampled, y_pred)\n",
+    "roc_auc = roc_auc_score(y_valid_resampled, y_pred_proba)\n",
+    "confusion = confusion_matrix(y_valid_resampled, y_pred)\n",
+    "\n",
+    "# Print the evaluation metrics and confusion matrix\n",
+    "print('ROC AUC Score:', roc_auc,'\\n')\n",
+    "print('Accuracy:', accuracy)\n",
+    "print('Precision:', precision)\n",
+    "print('Recall:', recall)\n",
+    "print('F1 Score:', f1)\n",
+    "print('Confusion Matrix:')\n",
+    "print(confusion)\n",
+    "print('#'*20,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1238,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "The utilization of SMOTE led to an exceptionally high AUC of 0.995 for both models, whether with or without UID. This outcome appears highly improbable, surpassing the performance of the first place model in the Kaggle competition by a large margin, which achieved an AUC of 0.96. Consequently, we suspect that SMOTE may have induced overfitting of our data points, resulting in the model's inflated AUC score."
+    "The utilization of SMOTE led to an exceptionally high AUC of 0.995 for non UID model and 0.996 for UID model. The F1 Score is also extremely high at 0.972 for non UID and 0.976 for UID. This outcome appears highly improbable, surpassing the performance of the first place model in the Kaggle competition by a large margin, which achieved an AUC of 0.96. Consequently, we have reason to suspect that SMOTE may have induced overfitting of our data points, resulting in the model's inflated AUC and F1 score."
    ]
   },
   {
